# network-graph

./: Makefile  network1.ipynb  network2.ipynb  pyproject.toml  requirements.txt  venvwrapper.sh
src/graphs/: graph.py
tests/: ggraph_test.py
